# cpprobotparser

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  doxyfile.dxg  generate_doxygen.py  robots.txt  vs2015_win32_generate_solution.bat  vs2015_win32_generate_solution.py  vs2015_x64_generate_solution.bat  vs2015_x64_generate_solution.py  vs2017_win32_generate_solution.bat  vs2017_win32_generate_solution.py  vs2017_x64_generate_solution.bat  vs2017_x64_generate_solution.py
cmake/: add_msvc_precompiled_header.cmake  config.cmake.in  configure_msvc_runtime.cmake
include/: export_macro.h  meta_robots_helpers.h  pimpl.h  robots_txt_rules.h  robots_txt_rules_impl.h  robots_txt_token.h  robots_txt_tokenizer.h  robots_txt_tokenizer_impl.h  stdafx.h  string_helpers.h  well_known_user_agent.h
single_include/: cpprobotparser.hpp
src/: main.cpp  meta_robots_helpers.cpp  robots_txt_rules.cpp  robots_txt_rules_impl.cpp  robots_txt_tokenizer.cpp  robots_txt_tokenizer_impl.cpp  string_helpers.cpp
tests/: CMakeLists.txt  main.cpp  rules_tests.cpp  tests.cpp  tokenizer_tests.cpp
tests/googletest/: CMakeLists.txt
